@@ -16,7 +16,7 @@ plugins {
     id "org.springframework.boot" version "2.1.4.RELEASE"
     id "io.spring.dependency-management" version "1.0.7.RELEASE"
     id "groovy"
-    id "net.ltgt.errorprone" version "0.0.14"
+    id "net.ltgt.errorprone" version "0.7.1"
     id "checkstyle"
     id "com.github.spotbugs" version "1.6.9"
     id "pmd"
@@ -27,8 +27,8 @@ plugins {
     id "com.energizedwork.webdriver-binaries" version "1.4"
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 wrapper {
     gradleVersion = "5.3.1"
@@ -37,10 +37,18 @@ wrapper {
 
 [compileJava, compileTestGroovy, compileTestJava]*.options*.encoding = "UTF-8"
 [compileJava, compileTestGroovy, compileTestJava]*.options*.compilerArgs = ["-Xlint:all,-options,-processing,-path"]
-compileJava.options.compilerArgs += [
-        "-Xep:RemoveUnusedImports:WARN"
-        , "-Xep:ParameterName:OFF"
-]
+tasks.named("compileTestJava").configure {
+    options.errorprone.enabled = false
+}
+// --add-opens オプションを複数指定するとエラーが出るのでコメントアウトする
+// https://github.com/gradle/gradle/issues/7045
+// のクローズ待ち？
+//compileTestGroovy {
+//    options.forkOptions.jvmArgs += [
+//            "--add-opens", "java.base/java.util=ALL-UNNAMED",
+//            "--add-opens", "java.base/java.lang.annotation=ALL-UNNAMED"
+//    ]
+//}
 
 // for Doma 2
 // JavaクラスとSQLファイルの出力先ディレクトリを同じにする
@@ -76,7 +84,7 @@ checkstyle {
 
 spotbugs {
     // SpotBugs のレポートファイルは Firefox で見ると文字化けしない
-    toolVersion = "3.1.3"
+    toolVersion = "3.1.11"
     ignoreFailures = true
     effort = "max"
     excludeFilter = file("${rootProject.projectDir}/config/spotbugs/spotbugs-exclude-filter.xml")
@@ -124,10 +132,10 @@ dependencyManagement {
 }
 
 dependencies {
-    def spockVersion = "1.3-groovy-2.4"
+    def spockVersion = "1.3-groovy-2.5"
     def domaVersion = "2.24.0"
     def lombokVersion = "1.18.6"
-    def errorproneVersion = "2.3.1"
+    def errorproneVersion = "2.3.3"
     def powermockVersion = "2.0.0"
     def seleniumVersion = "3.13.0"
     def spotbugsVersion = "3.1.11"
@@ -182,7 +190,9 @@ dependencies {
     testImplementation("org.powermock:powermock-api-mockito2:${powermockVersion}")
 
     // for Geb + Spock
-    testImplementation("org.gebish:geb-spock:2.3.1")
+    testImplementation("org.gebish:geb-spock:2.3.1") {
+        exclude group: "org.codehaus.groovy", module: "groovy-all"
+    }
     testImplementation("org.seleniumhq.selenium:selenium-chrome-driver:${seleniumVersion}")
     testImplementation("org.seleniumhq.selenium:selenium-firefox-driver:${seleniumVersion}")
     testImplementation("org.seleniumhq.selenium:selenium-support:${seleniumVersion}")
@@ -206,6 +216,22 @@ def jvmArgsForTask = [
         "-Dfile.encoding=UTF-8",
         "-Dsun.nio.cs.map=x-windows-iso2022jp/ISO-2022-JP"
 ]
+// JDK 11 に変更後、test タスク実行時に groovy と powermock が JDKの内部部分にアクセスするためにコードでリフレクションを使用
+// していて WARNING が出るため、JVM の起動時オプションの --add-opens を指定して WARNING が出ないようにする
+def jvmArgsAddOpens = [
+        "--add-opens=java.base/java.io=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-opens=java.base/java.net=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
+        "--add-opens=java.base/java.security=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.regex=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.stream=ALL-UNNAMED",
+        "--add-opens=java.desktop/java.beans=ALL-UNNAMED"
+]
 def printTestCount = { desc, result ->
     if (!desc.parent) { // will match the outermost suite
         println "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
@@ -214,11 +240,13 @@ def printTestCount = { desc, result ->
 
 bootRun {
     jvmArgs = jvmArgsForTask +
+            jvmArgsAddOpens +
             ["-Dspring.profiles.active=develop"]
 }
 
 tasks.withType(Test) {
     jvmArgs = jvmArgsForTask +
+            jvmArgsAddOpens +
             ["-Dspring.profiles.active=unittest"]
 }
 task testJUnit4AndSpock(type: Test) {
